_sass/minima/_layout.scss
* {
  box-sizing: border-box;
}

/* wrap */

.page-inner-main {
  min-height: 100vh;
}
#page-inner { 
  max-width: 1250px;
  width: 100%; 
  padding: 0; 
  background: $white; 
  margin-right: auto; 
  margin-left: auto;
}
#page-inner p { 
  font-size: 19px;
  line-height: $normal-line-height;
  text-align: justify;
  padding: 0;
}
@media screen and (max-width: 1000px) {
    #page-inner {
       width: 100% !important;
    }
	#page-inner p { font-size: 17px !important; }
    .side {
	   padding: 0 7% ($base-unit) 7% !important; /* 40px = 5% everywhere, now 7% */
	}
	.main {
	   padding: 0 7% ($base-unit * 3) 0 !important;
	}
	.main-with-margin {
	   padding: 0 7% ($base-unit * 3) 7% !important;
	}
	.only-main {
	   padding: ($base-unit) 7% !important;
	   max-width: 830px !important;
	}
   .post-list li {
       padding-left: 7% !important;
	}
	.post-list-heading {
       margin-left: 7% !important;
	}
	/* #scroll-btn {
	   visibility: visible !important;
	} */
}
@media screen and (max-width: 800px) {
    .side, .main, .only-main, .main-with-margin {
	   flex: 100% !important;
	}
	.side-head {
	  text-align: left !important;
	}
	.inner-bottom-column {
	   width: 100% !important;
	}
	.inner-bottom-menu a {
	   margin-right: 0 !important;
	   padding: 0 !important;
	}
	.side-in {
	   display: block !important;
	}
}


/* main */


.inner-wrap-column { 
  display: flex;
  flex-wrap: wrap;
  padding: ($base-unit * 2) 0;
}
.main {   
  flex: 70%;
  padding: ($base-unit) ($base-unit) 0 0;
}
.main-with-margin {   
  flex: 70%;
  padding: ($base-unit) ($base-unit * 2) ($base-unit) ($base-unit * 5);
}
.side {
  flex: 30%;
  padding: ($base-unit) ($base-unit * 2);
}
.only-main {
  flex: 100%;
  padding: ($base-unit) 0;
  margin: ($base-unit) ($base-unit * 5);
  margin-top: 0;
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
}
.only-main-top {
  flex: 100%;
  margin: 0;
  margin-left: auto;
  margin-right: auto;
}


.post-list-heading {
  margin-left: ($base-unit * 5);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $base-unit * 2;
	padding-bottom: $base-unit;
	padding-left: ($base-unit * 5);
	border-bottom: 1px solid $background-gray; 
  }
  
  /*> li:first-child {
    margin-top: -20px;
  }
  
  > li:hover { box-shadow: 1px -1px $background-gray, 1px 0 $background-gray, 0 -1px $background-gray; }*/
}


/* for translations  */

/*.visited a::before:visited {
  content: '- ';
}*/

.with-indent {
  text-indent: 5%;
}


/* header */

#site-header-inner { 
  height: 210px;
  margin: 0;
  text-align: center;
}
#site-title-back {  
  max-height: 210px;
  overflow: hidden !important;
  width: auto;
  margin: 0;
}
#site-title-back img {  
  pointer-events: none;
}

/* site title */

#site-title h1::selection, #site-under-title::selection {
  text-shadow: 0px 0 0px black;
  background: $lighter-blue;
  color: $almost-black;
}
#site-title, #site-under-title {
  text-align: left;
  text-shadow: 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 5px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white, 0 0 10px $white;
  position: absolute;
  z-index: 99;
  white-space: nowrap;
}
#site-title { 
  text-decoration: none;
  margin-left: 7%;
  margin-top: 139px;
}
#site-under-title { 
  margin-left: 7%;
  margin-top: 175px;
  color: $base-gray;
  font-style: italic;
}

/* top */

.inner-top-menu {
	border-bottom: 1px solid $background-gray;
    line-height: 50px;
    background-color: $light-blue; /* hsl(219, 25%, 75%); #b0bbd0; */
    text-align: center;
    cursor: default;
    font-family: 'Cormorant SC';
	font-weight: bold;
	font-size: 22px;
}
.inner-top-menu a {
    text-align: center;
    transition: .4s;
    display: inline-block;
    color: $almost-black;
	opacity: .7;
    padding: 0 10px;
	/* margin: 0 -8px; */
    transition: .15s;
    text-decoration: none !important;
    text-transform: uppercase;
    /* transform: scale(.9, 1); */
}
.inner-top-menu a:hover, .inner-bottom-menu a:hover, .active-menu {
	opacity: .5 !important;
    /* color: hsla(0,0%,0%,0.3) !important; for top - #7b8391 */
    text-decoration: none !important;
	/*text-shadow: 0 -1px lightgray, 0 2px 2px gray;*/
}
.active-menu {
    pointer-events: none !important;
}

/* bottom */


.inner-bottom-menu {
  font-size: 16px;
  border-top: 1px solid $background-gray;
  background-color: $light-gray;
  line-height: $base-unit * 2;
  overflow: hidden;
  text-align: left;
  padding: 10px 7%;
  margin:0;
}
.inner-bottom-menu a {
  text-transform: capitalize;
  color: $base-gray;
  padding: 0 3%;
  margin: 0;
  margin-right: 3%;
  text-decoration: none !important;
  display: block;
}
.inner-bottom-menu a:not(:first-child) {
  border-top: 1px solid $background-gray; 
}
.inner-bottom-column {
  width: 100%;
  float:left;
  margin: 10px 0;
}
.inner-bottom-column a {
  display: block;
}
.inner-bottom-column {
  width: 99.9999%;
}
.count-2 {
  width: 50%;
}
.count-3 {
  width: 33.3333%;
}
.inner-footer { 
  background-color: $tag-gray;
  color: $light-gray;
  line-height: 50px;
  text-align: center;
  cursor: default;
}



/* pagination */

.pagination {
  padding: ($base-unit) 10% ($base-unit) 15%;
  cursor: default;
  font-style: normal;
  line-height: 33px;
  text-align: center;
  font-size: 0; /* remove spacing */
}
/* ... */

